# polaris_backend_fastapi

./: .dockerignore  .env.deploy.example  .env.example  .flake8  .gitignore  CUsersAdministratorDesktopbackend_team.env.example  DB_OPERATIONS.md  DB쿼리최적화_250개에서1개로.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  LANGGRAPH_GUIDE.md  PROJECT_SUMMARY.md  QDRANT_INTEGRATION_STATUS.md  README.md  README_251216.md  README_NEW.md  README_SUMMARY_251216.md  REMOVE_ENV_VAR.md  UV_SETUP.md  VERIFICATION_REPORT.md  agent_workflow.mmd  build-and-deploy.sh  build.sh  deploy.sh  development_standard.md  docker-build.sh  docker-deploy.sh  jy.py  main.py  openapi.json.backup  openapi.yaml  pyproject.toml  requirements.txt  run_agent.py  run_loaders.py  test.txt  test_agent_workflow_mock.py  test_dashboard_summary.py  (+16 more)
.github/workflows/: cd_python.yaml  ci_python.yaml
ETL/: README.md  SETUP.md  USAGE.md  test_sample_load.sh
ETL/scripts/: load_monthly_grid_data.py  load_yearly_grid_data.py
TC/: pytest_pdf_report_results.txt  pytest_qdrant_results.txt  pytest_results.txt  pytest_results_current_state_analysis.txt  pytest_results_current_state_pdf.txt  pytest_results_filtered.txt  pytest_results_virtual_db.txt  pytest_workflow_results.txt  pytest_workflow_results_all_passing.txt  pytest_workflow_results_final.txt  pytest_workflow_results_fixed.txt  test_analysis_core.py  test_qdrant_automation.py  test_report_pdf.py  test_workflow_integrity.py
agents/: __init__.py  base_climate_risk_agent.py  data_collection_agent.py  report_generation_agent.py  report_template_agent.py  risk_integration_agent.py  ssp_probability_calculator.py  vulnerability_analysis_agent.py
agents/climate_risk_agents/: __init__.py  (+8 more)
ai_agent/: .env.example  README.md  __init__.py  additional_data_flow.mmd  development_standard.md  integrated_workflow.mmd  main.py  requirements.txt  visualize_complete_flow.py  visualize_workflow.py  workflow_diagram.mmd
config/: settings.py
core/: auth.py  config.py
docs/: AAL_V11_API_IMPACT_ANALYSIS.md  AI_AGENT_ARCHITECTURE_SPEC.md  API_ENHANCE_USAGE.md  DB_TEAM_REQUEST.md  Datawarehouse (4).dbml  Datawarehouse.dbml  FASTAPI_PATH_PARAMETER_REMOVAL.md  GCP_SERVER_DEPLOY_GUIDE.md  GITHUB_SECRETS_GUIDE.md  GITHUB_SECRETS_SETUP.md  LANGSMITH_INTEGRATION_SUMMARY.md  LANGSMITH_MONITORING_GUIDE.md  LOCAL_DATABASE_SETUP.md  LOCAL_DOCKER_TEST_GUIDE.md  ORACLE_SERVER_DEPLOY_GUIDE.md  README_PROBABILITY_LOGIC.md  erd.md  fastapi_threadpool_shutdown.md  financial_impacts_test_data.sql  standards_core.md  tcfd_report_final_structure.md
migrations/: 001_add_completion_flags_to_batch_jobs.sql
plan/: progress.md
routes/: __init__.py  analysis.py  meta.py  reports.py  simulation.py
schemas/: __init__.py  common.py  reports.py  simulation.py
scripts/: ingest_rag_documents.py
services/: analysis_service.py  meta_service.py  report_service.py  simulation_service.py
static/: index.html
test_output/: node1_pdf_result_20251215_170553.json  report_json_for_front.json  tcfd_report_frontend_20251217_091249.json  tcfd_report_frontend_20251217_093158.json  tcfd_report_frontend_20251217_112518.json  tcfd_report_frontend_20251217_112818.json  tcfd_report_raw_20251217_091249.json  tcfd_report_raw_20251217_093158.json  tcfd_report_raw_20251217_112518.json  tcfd_report_raw_20251217_112818.json  test_output_real.json
utils/: llm_client.py  rag_engine.py  region_mapper.py  upsert_from_csv.sql
workflow/: __init__.py  graph.py  nodes.py  state.py
(+355 files in other folders)
