[project]
name = "polaris-backend-fastapi"
version = "0.1.0"
description = "SKAX Physical Risk Analysis System - AI Agent Backend with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.38.0",
    "langchain==1.0.3",
    "langchain-openai==1.0.2",
    "langchain-community==0.4.1",
    "langchain-core==1.0.3",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.1",
    "openai==2.7.2",
    "python-dotenv==1.2.1",
    "pydantic==2.12.3",
    "pydantic-settings==2.12.0",
    "httpx==0.28.1",
    "pandas==2.3.3",
    "numpy==2.3.4",
    "scikit-learn==1.7.2",
    "xarray==2025.10.1",
    "netcdf4==1.7.3",
    "geopandas==1.1.1",
    "rasterio==1.4.3",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "plotly==6.4.0",
    "chromadb==1.3.4",
    "sentence-transformers==5.1.2",
    "tiktoken==0.12.0",
    "sqlalchemy==2.0.44",
    "reportlab==4.4.4",
    "weasyprint==66.0",
    "openpyxl",
    "bcrypt==5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "black==25.9.0",
    "flake8==7.3.0",
    "mypy==1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
