[project]
name = "polaris-backend-fastapi"
version = "0.1.0"
description = "SKAX Physical Risk Analysis System - AI Agent Backend with FastAPI"
requires-python = ">=3.11"
dependencies = [
    # FastAPI & Web Framework
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "starlette==0.47.2",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",

    # LangChain & AI
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-text-splitters==0.3.11",

    # LangGraph (Workflow)
    "langgraph==1.0.1",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.1",
    "langgraph-sdk==0.2.9",

    # LangSmith (Tracing & Monitoring)
    "langsmith==0.4.13",
    "langchain-teddynote==0.5.4",

    # OpenAI
    "openai==2.6.0",
    "tiktoken==0.10.0",

    # Configuration
    "python-dotenv==1.1.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "PyYAML==6.0.2",
    "typing-extensions==4.14.1",

    # Data Science & ML
    "pandas==2.3.3",
    "numpy==2.3.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",

    # Climate & Geo Data
    "xarray==2025.10.1",
    "netCDF4==1.7.3",

    # Visualization
    "matplotlib==3.10.7",
    "plotly==6.4.0",

    # Vector DB & Embeddings
    "faiss-cpu==1.11.0.post1",
    "pinecone-client==6.0.0",
    "pinecone-text==0.11.0",

    # NLP & Korean Language
    "konlpy==0.6.0",
    "kiwipiepy==0.22.0",
    "nltk==3.9.2",

    # Database
    "sqlalchemy==2.0.42",
    "psycopg2-binary==2.9.10",  # PostgreSQL driver
    "asyncpg==0.30.0",  # Async PostgreSQL driver

    # Utilities
    "tenacity==9.1.2",
    "tavily-python==0.7.12",
    "requests==2.32.5",

    # Scheduling (AIops Workflow)
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",

    # Code Quality
    "black>=25.0.0",
    "flake8>=7.0.0",
    "mypy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "ai_agent"]
